Update 1.3.4 - Using MCreator 2025.3